--- a/src/blocks/popup/__registerStatus/_fail/popup__registerStatus_fail.css
+++ b/src/blocks/popup/__registerStatus/_fail/popup__registerStatus_fail.css
@@ -1,4 +1,7 @@
 .popup__registerStatus_fail {
     background-image: url(../../../../images/Union_fail.svg);
     background-repeat: no-repeat;
+    width: 120px;
+    height: 120px;
+    margin: 60px auto 32px;
 }
