--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     margin: 0 auto;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
+    align-items: center;
 }
 
 @media (min-width: 320px) {
