--- a/src/blocks/popup/__registerStatus/_success/popup__registerStatus_success.css
+++ b/src/blocks/popup/__registerStatus/_success/popup__registerStatus_success.css
@@ -1,4 +1,7 @@
 .popup__registerStatus_success {
     background-image: url(../../../../images/Union_succes.svg);
     background-repeat: no-repeat;
+    width: 120px;
+    height: 120px;
+    margin: 60px auto 32px;
 }
